--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,8 +5,207 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="./Styles/nav.css" />
   </head>
+  <style>
+    .header {
+      width: 100%;
+      height: 60vh;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-color: #ce0505;
+      position: relative;
+      z-index: 10;
+    }
+
+    .header .bg-image {
+      height: 100%;
+    }
+
+    .header img {
+      width: 100%;
+      height: 100%;
+      background-image: url("\images\homePage.png");
+    }
+
+    .header .logo1 {
+      width: 100px;
+      height: 100px;
+      background-color: white;
+      border-radius: 50%;
+      padding: 5px 8px 0px;
+      font-weight: bold;
+      color: #ce0505;
+      font-size: 3rem;
+      cursor: pointer;
+      text-align: center;
+      position: absolute;
+      bottom: 43%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .loginpart {
+      position: absolute;
+      top: 3%;
+      right: 7%;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 2rem;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    .btn-Createaccount {
+      border: 2px solid;
+      border-radius: 0.2rem;
+      padding: 0.4rem 0.5rem;
+    }
+
+    .header-heading {
+      position: absolute;
+      bottom: 25%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: #fff;
+      width: 80%;
+    }
+
+    .search-area {
+      position: absolute;
+      bottom: 10%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      gap: 2rem;
+    }
+
+    .searchForLocation input {
+      background: #fff;
+      border-radius: 0.2rem;
+      padding: 0.4rem 0.5rem;
+      border: none;
+    }
+
+    .searchForRestaurant input {
+      padding: 0.4rem 2.5rem;
+      width: 100%;
+      border: none;
+    }
+
+    .fa-solid {
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      color: gray;
+    }
+
+    .loginpart img {
+      width: 50px;
+    }
+  </style>
   <body>
-    <%- include("./partials/nav.ejs") %> <%= JSON.stringify(locals.user) %> <%-
+    <div class="header">
+      <div class="bg-image">
+        <img src="" alt="bg-image.." />
+      </div>
+      <div class="container">
+        <div class="col-6">
+          <div class="logo1">e!</div>
+        </div>
+
+        <% if (locals.user) { %>
+        <div class="loginpart gap-2">
+          <a
+            class="btn-transperant btn-Createaccount navbar-brand"
+            href="/user/login"
+            >Logout</a
+          >
+          <p class="navbar-brand" style="align-items: center; margin: 0%">
+            <%= user.name %>
+          </p>
+          <img
+            src="<%= user.profileImageURL %>"
+            width="50px"
+            style="border-radius: 70%"
+          />
+        </div>
+        <% } else { %>
+        <div class="loginpart">
+          <a href="/user/login" class="btn-transperant btn-Login navbar-brand">
+            Login
+          </a>
+          <a
+            href="/user/signup"
+            class="btn-transperant btn-Createaccount navbar-brand"
+          >
+            Create an account
+          </a>
+        </div>
+        <% } %>
+
+        <div class="header-heading">
+          <h1>Find the best restaurants, cafes, and bars</h1>
+        </div>
+
+        <div class="search-area d-flex align-items-center">
+          <div class="searchForLocation">
+            <input
+              type="text"
+              class=""
+              name="searchForLocation"
+              id="searchForLocation"
+              placeholder="Please type a location"
+              onkeyup="sendData(this)"
+            />
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+          <div class="searchForRestaurant">
+            <input
+              type="text"
+              class=""
+              name="restaurantName"
+              id=""
+              placeholder="Search for restaurants"
+            />
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <section id="searchResult"></section>
+          </div>
+        </div>
+      </div>
+    </div>
+    <%- include("./partials/mealType.ejs") %> <%-
     include("./partials/script.js") %>
+    <script>
+      function sendData(e) {
+        const searchResult = document.getElementById("searchResult");
+        fetch(
+          "http://localhost:4000/api/restaurant/getRestarantByLocationAndRestName",
+          {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ payload: e.value }),
+          }
+        )
+          .then((res) => res.json())
+          .then((data) => {
+            const payload = data.payload;
+            console.log(payload);
+            searchResult.innerHTML = "";
+            if (payload.length < 1) {
+              searchResult.innerHTML = "<p>Sorry. Nothing Fount</p>";
+              return;
+            }
+            payload.forEach((item, index) => {
+              if (index > 0) searchResult.innerHTML += "<hr>";
+              searchResult.innerHTML += `<p>${item.restaurantName}</p>`;
+            });
+            return;
+          });
+      }
+    </script>
   </body>
 </html>
