--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -9,11 +9,11 @@
 
     <div class="container mt-4">
       <div class="mealtype-heading">
-        <h2>Breakfast Places in Delhi</h2>
+        <h2>Restaurants</h2>
       </div>
     </div>
 
-    <%-include("./partials/filterSection.ejs") %> <%-
+    <%-include("./partials/restaurantPage.ejs") %> <%-
     include("./partials/script.js") %>
   </body>
 </html>
