--- a/views/home.ejs
+++ b/views/home.ejs
@@ -176,8 +176,8 @@
             <div class="searchForLocation">
               <input
                 type="text"
-                name="restaurantLocation"
-                id="restaurantLocation"
+                name="restaurantCity"
+                id="restaurantCity"
                 placeholder="Please type a location"
                 autocomplete="off"
               />
